# OMR-SAM2-Grader

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup_colab.sh
assets/demo/: README.md
assets/imgs/: pipeline_diagram.md
notebooks/: OMR_SAM2_GRADER  OMR_SAM2_Grader_Colab.ipynb
omr_sam2_grader/: __init__.py  colab_entry.py  pipeline_exact.py  postprocess.py  utils.py
scripts/: run_colab.py  smoke_test.py
src/: detector.py  ocr_engine.py  processor.py
