[metadata]
name = omr-sam2-grader
version = 0.1.0
description = OMR grader using Grounding DINO + SAM-2 (Colab-first workflow).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    pymupdf
    rapidocr-onnxruntime
    ultralytics
    transformers
    torch
    torchvision
    opencv-python
    Pillow
    matplotlib
    numpy
    pandas
    openpyxl

[options.packages.find]
include =
    omr_sam2_grader*
